[gd_scene load_steps=2 format=3 uid="uid://sfonpsh36gan"]

[ext_resource type="Script" uid="uid://c22iu1ijsn8fj" path="res://scenes/menus_inn/inn_item.gd" id="1_qx51g"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qx51g")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelName" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelPrice" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
